# ESP_NOW_Master

./: CMakeLists.txt  README.md  platformio.ini  sdkconfig
src/: CMakeLists.txt  main.cpp  shared_types.h
src/common/: system_state.cpp
src/common/protocol/: protocol_units.h
src/common/sensors/: mt6701_ssi_sensor.h
src/common/state/: shared_data.h
src/common/timing/: link_timing.h  loop_timing.h
src/master/: master_config.cpp  master_config.h  master_control.cpp  master_control.h  master_hardware.cpp  master_hardware.h  master_status.cpp  master_status.h  master_tasks.cpp  master_tasks.h  master_transport.cpp  master_transport.h
src/master/comm/: master_packet_builder.cpp  master_packet_builder.h  master_transport.cpp  master_transport.h  slave_telemetry_reader.cpp  slave_telemetry_reader.h
src/master/config/: master_axis_config.h  master_build_options.h  master_comm_config.h  master_config.cpp  master_config.h  master_current_sense_config.h  master_haptic_config.h  master_log_config.h  master_motor_config.h  master_task_config.h
src/master/control/: master_axis_input.cpp  master_axis_input.h  master_control.cpp  master_control.h  master_dual_axis_control.h
src/master/diagnostics/: current_probe.cpp  current_probe.h  master_diagnostics.cpp  master_diagnostics.h  phase_probe.cpp  phase_probe.h
src/master/haptics/: current_command.cpp  current_command.h  master_haptic_engine.cpp  master_haptic_engine.h
src/master/hardware/: master_board_io.cpp  master_board_io.h  master_current_sense_adc1.cpp  master_current_sense_adc1.h  master_encoder_hw.cpp  (+4 more)
(+6 files in other folders)
